# discord-bot

./: Cargo.toml  Dockerfile  README.md  Shuttle.toml
src/: lib.rs  main.rs
src/command/: calc.rs  cheese.rs  hello.rs  help.rs  meme.rs  mod.rs  random.rs  source.rs
