[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"
description = "A simple discord bot that includes a random option picker and calculator."
license = "MIT"
repository = "https://github.com/BeaconBrigade/discord-bot.git"
homepage = "https://github.com/BeaconBrigade/discord-bot"

[lib]

[dependencies]
serenity = { version = "0.11", default-features = false, features = [
    "framework",
    "standard_framework",
    "model",
    "rustls_backend",
] }
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
meval = "0.2.0"
shuttle-service = { version = "0.5.2", features = [
    "bot-serenity",
    "secrets",
    "sqlx-postgres",
] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
